feat(develop): Add Exception Handler
Reviewed-by: Hernán Federico Costarelli <hernancostarelli@gmail.com>